Jun 30, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.11

Jun 27, 2011 - chris
o fixed a performance regression - when Transactions are enabled, the file
	was frequently flushed via fsync() even if HAM_WRITE_THROUGH was not
	set (thanks, Jake and Colm)

Jun 26, 2011 - chris
o the ./configure switch --enable-internal is now obsolte and enabled by
	default

Jun 20, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.10

Jun 18, 2011 - chris ---------------------------------------------------
o the flag HAM_WRITE_THROUGH will now cause an immediate flush of all file
	handles to disk (via fdatasync or fsync, if fdatasync is not available, 
	or FlushFileHandle on win32) if recovery (or Transactions) are enabled.
	This causes a noticable performance hit if you have many short-running 
	Transactions, but it improves the durability in case the hardware 
	crashes (a normal application segfault is not problematic because in
	such a case the operating system buffers are still flushed to disk). 

May 25, 2011 - chris ---------------------------------------------------
o the cachesize is now more respected than before; while earlier releases
	frequently exceeded the cache when necessary, hamsterdb will now try to
	remain in the cache boundaries as good as possible

May 13, 2011 - chris ---------------------------------------------------
o added tools/ham_log - a tool to dump logfiles
o added tools/ham_recover - a tool to recover broken databases

Apr 28, 2011 - chris ---------------------------------------------------
o bugfix: when ham_open[_ex] or ham_env_open[_ex] return HAM_NEED_RECOVERY
    these functions deleted the logfiles by mistake. Fixed, and added
    a unittest to avoid regressions

Apr 27, 2011 - chris ---------------------------------------------------
o bugfix: after SMOs which affect the root page (i.e. a new root page is