@@ -1,3 +1,7 @@
+Jul 01, 2011 - chris ---------------------------------------------------
+o bugfix: there was still a problem in the cache purge algorithm, and the
+	memory consumption passed the cache boundaries. (Thanks, Jake)
+
 Jun 30, 2011 - chris ---------------------------------------------------
                       release of hamsterdb-1.1.11
 
